Fixed problem with footer jumping

--- a/styles.css
+++ b/styles.css
@@ -269,14 +269,17 @@ main {
     flex-direction: column;
     float: left;
     top: 0;
-    margin: 0 auto;
+    /* margin: 0 auto; */
+    margin: 0;
     height: 100%;
     width: 7%;
+    padding-bottom: 10px;
+    padding-right: 10px;
 }
 
   #thumbs li {
     list-style: none;
-    border: solid 1px #ccc;
+    border: solid 2px #ccc;
     width: 90%;
     height: 100%;
     padding: 3px;
@@ -284,7 +287,7 @@ main {
 }
 
   #thumbs li:hover {
-    border: solid 3px  #FF9900;
+    border: solid 2px  #FF9900;
 
 }
 
